fixed alignment issue in mobile

--- a/resources/stylesheets/css/search.css
+++ b/resources/stylesheets/css/search.css
@@ -167,11 +167,14 @@ SITE SUGGESTIONS WRAPPER
 /********************
        MOBILE
 ********************/
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 900px) {
   #search-suggestions {
     width: calc(100vw - 60px);
   }
 
+  .ss-site-info-wrapper {
+    align-items: initial;
+  }
   .ss-site-meta-wrapper {
     flex-direction: column;
     align-items: initial;
