--- a/resources/stylesheets/scss/nav.scss
+++ b/resources/stylesheets/scss/nav.scss
@@ -130,7 +130,7 @@ nav {
 /********************
        MOBILE
 ********************/
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 900px) {
   nav {
     & {
       padding: 5px;
